--- a/style.css
+++ b/style.css
@@ -23,6 +23,15 @@ i{
     font-size: 2rem;
 }
 
+.shorty{
+  border-top: 1px solid white;
+  border-bottom: 1px solid gray;
+  margin: auto;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  max-width: 5vh;
+}
+
 .idLink:link{
     color: #FFFFFF;
     text-decoration:none;
